--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0px;
     box-sizing: border-box;
 }
+body{
+    background-color: darkslateblue;
+}
+
 
  .main-container{
     display: flex;
